# DIScws

./: .gitignore
A2/Module2/: denoising.ipynb
a2_coursework/: README.md  a2coursework_env.yml  requirements.txt
a2_coursework/main/: A2_Module1.ipynb  A2_Module3.ipynb
c1_coursework/: .requirements_c1courswork.txt  README.md  pyproject.toml
c1_coursework/dual_autodiff/: .nfs00000003008850cd000118cb  dual.py  pyproject.toml  test.py
c1_coursework/dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
c1_coursework/dual_autodiff_x/: pyproject.toml  requirements_dual_autodiff_x.txt  setup.py
c1_coursework/dual_autodiff_x/dual_autodiff_x/: dual.c  dual.pyx
c1_coursework/dual_autodiff_x/dual_autodiff_x.egg-info/: SOURCES.txt
c1_coursework/dual_autodiff_x/dual_autodiff_x/dual_autodiff_x.egg-info/: PKG-INFO
c1_coursework/source/: conf.py  index.rst
c1_coursework/tests/: .nfs00000003012586c00000e395  dual_autodiff.ipynb  q5_test.py  q6_test.py
c1_coursework/tests/.ipynb_checkpoints/: dual_autodiff-checkpoint.ipynb
c2_coursework/: Makefile  README.md  animate.ipynb
c2_coursework/main/: .gitignore  CMakeLists.txt
c2_coursework/main/Sh/: run_non-parallel.slurm  run_parallel_mpi.slurm  run_parallel_mpiomp.slurm  run_parallel_omp.slurm
c2_coursework/main/Source/: non-parallel-blocking.cpp  non-parallel-fb.cpp  non-parallel-float.cpp  non-parallel.cpp  original.cpp  parallel-float.cpp  parallel-mpi.cpp  parallel-mpiomp.cpp  parallel-omp.cpp
m1_coursework/: .requirements_m1coursework.txt  README.md
m1_coursework/Q1-2/: .resume_training_from_last_checkpoint.py  Q2.py  Q2_radarchart.py  Q2_save_checkpoint.py  Q2_tuning.py  best_model_checkpoint.pth  construct_dataset.py  model_checkpoint.pth  optuna_study_results.csv
m1_coursework/Q3/: classifiers.py  main.py  out.txt  read_data.py  train_evaluate.py
m1_coursework/Q4/: construct_dataset.py  main.py  models.py  output.txt  read_data.py
m1_coursework/Q5/: construct_dataset.py  main.py
m1_coursework/tests/: construct_dataset.py
m2_coursework/: README.md  m2coursework_env.yml  pyproject.toml
m2_coursework/main/: requirements.txt
m2_coursework/main/.temp/: evaluate.py  plot_stat.py  predator99value.npy  prey99value.npy
m2_coursework/main/.temp/1e-4_2/: lora_r2_lr0.0001_s1000_cl512.pt  qwen.py
m2_coursework/main/.temp/1e-4_4/: lora_r4_lr0.0001_s1000_cl512.pt  prey99value.npy
m2_coursework/main/.temp/1e-4_8/: lora_r8_lr0.0001_s1000_cl512.pt
m2_coursework/main/.temp/1e-5_2/: lora_r2_lr1e-05_s1000_cl512.pt
m2_coursework/main/.temp/1e-5_4/: lotka_volterra_data.h5
m2_coursework/main/.temp/1e-5_8/: flops.py  predict.py
m2_coursework/main/.temp/5e-5_2/: lora_r2_lr5e-05_s1000_cl512.pt
m2_coursework/main/.temp/5e-5_4/: predictions
m2_coursework/main/.temp/5e-5_8/: predator99value.npy  preprocessor.py
m2_coursework/main/data/: predator99value.npy  prey99value.npy
m2_coursework/main/data/loss_log/: log_plot.py  log_rx_lr1-4e_s1000_cl512.txt
m2_coursework/main/figs/: quick_viewer.html  readme
m2_coursework/main/models/: lora_r2_lr1e-04_s1000_cl512.pt  lora_r2_lr1e-05_s1000_cl128.pt  lora_r2_lr1e-05_s1000_cl512.pt  lora_r2_lr1e-05_s1000_cl768.pt  lora_r2_lr1e-05_s25000_cl768.pt  lora_r2_lr1e-05_s5000_cl768.pt  lora_r4_lr1e-05_s1000_cl512.pt  lora_r4_lr5e-05_s1000_cl512.pt  lora_r8_lr1e-05_s1000_cl512.pt  lora_r8_lr5e-05_s1000_cl512.pt  lora_weights.pt
m2_coursework/main/sh/: evaluate.sh  evaluate_3x3.sh  evaluate_cl.sh  lora_train.sh  lora_train_3x3.sh  lora_train_cl.sh  predict.sh  predict.slurm  predict_3x3.sh  predict_cl.sh  predict_cpu.sh  temp.sh  temp.txt  temp_eval.sh  temp_qwen_r2_lr1e-4.sh
m2_coursework/main/src/: .nfs0000000332bc1a12000149e6  evaluate.py  flops.py  lora.py  lora_skeleton.py  plot_stat.py  predict.py  preprocessor.py
m2_coursework/main/workdir/: lora_r2_lr1e-05_s1000_cl128.pt  lora_r2_lr1e-05_s1000_cl512.pt  lora_r2_lr1e-05_s1000_cl768.pt  lora_r2_lr1e-05_s5000_cl768.pt  lora_skeleton.py  predator99value.npy  prey99value.npy
m2_coursework/main/workdir/1e-05_2/: lora.py  lora_r2_lr1e-04_s1000_cl512.pt  lora_r2_lr1e-05_s1000_cl128.pt  lotka_volterra_data.h5  predictions
s1_coursework/: s1_Coursework.ipynb  s1_Coursework_AtoDii.ipynb  s1_Coursework_DiiitoG_optimization.ipynb
