[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
version = {use_scm = false}  # SCM-based versioning disabled
description = "A package for dual number-based automatic differentiation."
authors = [
    {name = "Yuiko Ichikawa", email = "dummy@cam.ac.uk"}
]
dependencies = []
requires-python = ">=3.6"

[tool.setuptools]
package-dir = {"" = "dual_autodiff"}
