[project]
name = "m2coursework"
version = "0.1.0"
description = "Minimal pyproject.toml for M2 coursework"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "accelerate",
  "certifi",
  "charset-normalizer",
  "contourpy",
  "cycler",
  "einops",
  "filelock",
  "fonttools",
  "fsspec",
  "h5py",
  "huggingface-hub",
  "idna",
  "importlib-resources",
  "jinja2",
  "kiwisolver",
  "markupsafe",
  "matplotlib",
  "mpmath",
  "networkx",
  "numpy",
  "nvidia-cublas-cu12",
  "nvidia-cuda-cupti-cu12",
  "nvidia-cuda-nvrtc-cu12",
  "nvidia-cuda-runtime-cu12",
  "nvidia-cudnn-cu12",
  "nvidia-cufft-cu12",
  "nvidia-curand-cu12",
  "nvidia-cusolver-cu12",
  "nvidia-cusparse-cu12",
  "nvidia-cusparselt-cu12",
  "nvidia-nccl-cu12",
  "nvidia-nvjitlink-cu12",
  "nvidia-nvtx-cu12",
  "packaging",
  "pandas",
  "pillow",
  "psutil",
  "pyparsing",
  "python-dateutil",
  "pytz",
  "pyyaml",
  "regex",
  "requests",
  "safetensors",
  "scipy",
  "six",
  "sympy",
  "tiktoken",
  "tokenizers",
  "torch",
  "torchsummary",
  "tqdm",
  "transformers",
  "transformers-stream-generator",
  "triton",
  "typing-extensions",
  "tzdata",
  "urllib3",
  "zipp"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
