[build-system]
requires = ["setuptools>=61.0.0", "Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
version = "0.1.0"
description = "Cythonized dual number-based package."
authors = [
    {name = "Yuiko Ichikawa", email = "dummy@cam.ac.uk"}
]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["dual_autodiff_x"]         # List the packages explicitly
